# llm-inference-acceleration-playground

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  proposal.md  pyproject.toml
.github/workflows/: ci.yml
configs/: benchmark_prefix_cache.yaml  benchmark_prompts.yaml  benchmark_small.yaml  benchmark_vllm_small.yaml  optimization_matrix_mock.yaml  task_eval_small.jsonl
docs/: backend_capabilities.md  benchmark_methodology.md  hardware_benchmark_runbook.md  kv_cache.md  proposal_implementation_audit.md  quality_eval.md  quantization.md  release.md  research_optimization_plan.md  result_schemas.md  speculative_decoding.md  vllm.md
docs/methods/: eagle.md  flashattention.md  medusa.md  specinfer.md
scripts/: release_check.py  run_hardware_profile.py  smoke.py
src/llm_accel/: __init__.py  cli.py  examples.py
src/llm_accel/benchmarks/: latency.py  matrix.py  sweep.py  throughput.py
src/llm_accel/config/: loader.py
src/llm_accel/evaluation/: __init__.py  io.py  quality.py  tasks.py  validators.py
src/llm_accel/example_configs/: benchmark_local.yaml  benchmark_prefix_cache.yaml  benchmark_prompts.yaml  prefix_cache_prompts.jsonl  spec_prompts.jsonl
src/llm_accel/kv_cache/: __init__.py  estimator.py  presets.py
src/llm_accel/metrics/: __init__.py  aggregation.py  environment.py  execution_identity.py  io.py  manifest.py  memory.py  optimization_profile.py  schemas.py  token_counting.py
src/llm_accel/quantization/: __init__.py  comparison.py  sanity.py
src/llm_accel/reports/: claim_audit.py  comparison.py  markdown.py  plots.py  ranking_audit.py  regenerate.py  validation.py
src/llm_accel/serving/: __init__.py  capabilities.py  health.py  openai_client.py  profiles.py  versions.py  vllm.py  vllm_plan.py  vllm_validation.py
src/llm_accel/speculative_decoding/: __init__.py  analysis.py  vanilla.py
src/llm_accel/workloads/: __init__.py  prompts.py  synthetic.py
tests/integration/: test_cli.py  test_openai_client.py
tests/unit/: test_backend_profiles.py  test_backend_versions.py  test_capabilities.py  test_claim_audit.py  test_config_loader.py  test_environment.py  test_health.py  test_kv_cache.py  test_latency_timeout.py  test_matrix.py  test_memory.py  test_metrics.py  test_optimization_profile.py  test_prompts.py  test_quality_eval.py  test_quantization_comparison.py  test_quantization_sanity.py  test_release_check.py  test_report_comparison.py  test_report_validation.py  test_speculative_analysis.py  test_task_eval.py  test_task_validators.py  test_token_counting.py  test_vllm.py  test_vllm_plan.py  test_vllm_validation.py
