[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-inference-acceleration-playground"
dynamic = ["version"]
description = "Open source toolkit for measuring LLM inference-serving latency, throughput, KV cache memory, and acceleration tradeoffs."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Hanbin Tan" }
]
keywords = ["llm", "inference", "benchmark", "vllm", "latency", "throughput", "kv-cache"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["jsonschema>=4.23", "tokenizers>=0.20"]

[project.urls]
Homepage = "https://github.com/hskl18/llm-inference-acceleration-playground"
Repository = "https://github.com/hskl18/llm-inference-acceleration-playground"
Issues = "https://github.com/hskl18/llm-inference-acceleration-playground/issues"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]
plot = ["matplotlib>=3.8"]

[project.scripts]
llm-accel = "llm_accel.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
llm_accel = ["example_configs/*"]

[tool.setuptools.dynamic]
version = {attr = "llm_accel._version.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 180
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F"]
